--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <div class="container">
-<iframe src="https://gjdnetwork.github.io/feed/1/it/index.html" title="description"></iframe>
+      <iframe src="https://gjdnetwork.github.io/feed/1/it/index.html" style="height:200px;width:300px;" title="Iframe Example"></iframe>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
