--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GJD feed</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+      html, body, .container, iframe {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      iframe {
+        height: 90vh; /* 90% dell'altezza del viewport */
+        width: 90%; /* 90% della larghezza del container */
+        border: none;
+      }
+    </style>
   </head>
   <body>
-
     <div class="container">
-      <iframe src="https://gjdnetwork.github.io/feed/1/it/index.html" style="height:200px;width:300px;" title="Iframe Example"></iframe>
+      <iframe src="https://gjdnetwork.github.io/feed/1/it/index.html" title="Iframe Example"></iframe>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
